--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,8 +3,18 @@ name: Build and Test
 on: [ pull_request ]
 
 jobs:
+  notify:
+    name: Discord Notification
+    runs-on: ubuntu-latest
+    steps:
+    - name: Discord notification (pull request)
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@0.1.0
   api-tests:
-    name: Api - Tests
+    name: Api Tests
+    needs:
+      - notify
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -35,7 +45,7 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: '${{ github.job }} succeeded for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
+        args: '[Api Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) succeeded for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
     - name: Push results to discord (fail)
       if: failure()
       env:
@@ -44,9 +54,11 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: '${{ github.job }} failed for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
+        args: '[Api Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
   web-tests:
-    name: Web - Tests
+    name: Web Tests
+    needs:
+      - notify
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -66,7 +78,7 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: '${{ github.job }} succeeded for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
+        args: '[Web Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) succeeded for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
     - name: Push results to discord (fail)
       if: failure()
       env:
@@ -75,9 +87,11 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: '${{ github.job }} failed for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
+        args: '[Web Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
   build:
     name: Build
+    needs:
+      - notify
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -104,7 +118,7 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: '${{ github.job }} succeeded for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
+        args: '[Build](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) succeeded for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
     - name: Push results to discord (fail)
       if: failure()
       env:
@@ -113,4 +127,4 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: '${{ github.job }} failed for [PR#${{ github.event.number }}: ${{ github.event.title }}](${{ github.event.html_url }}) on ${{ github.repository }}'
+        args: '[Build](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
