--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,57 +1,24 @@
 name: Build and Test
 
-on:
-  push:
-    branches: [ master, develop ]
-  pull_request:
-    branches: [ master, develop ]
+on: [ pull_request ]
 
 jobs:
-  notify-build:
-    name: Notify In Discord
+  notify:
+    name: Discord Notification
     runs-on: ubuntu-latest
     steps:
-    - name: Discord notification (commit)
-      if: always()
+    - name: Discord notification (pull request)
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       uses: Ilshidur/action-discord@0.1.0
-  version-bump:
-    name: Version Bump
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version-bump.outputs.version }}
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Bump Version
-        uses: nobrayner/version-bumper@master # Because this is still being tested!
-        id: version-bump
-        with:
-          github-token: ${{ secrets.github_token }}
-          bump: 'preminor'
-          prerelease-text: 'dev'
-      - name: Commit new version
-        if: ${{ steps.version-bump.outputs.new-version == 'true' || steps.version-bump.outputs.new-version == true }}
-        run: |
-          echo "Version Bump new-version: ${{ steps.version-bump.outputs.new-version }}"
-          echo ${{ steps.version-bump.outputs.version }} > version.info
-          cd web && npm version --git-tag-version=false --allow-same-version ${{ steps.version-bump.outputs.version }}
-          cd ../api && echo ${{ steps.version-bump.outputs.version }} > VERSION
-          cd ..
-          git config user.email version-bumper@github.com
-          git config user.name ${{ github.actor }}
-          git add .
-          git commit -m "Bump version to ${{ steps.version-bump.outputs.version }}"
-          git push
-  build-api:
+  api-tests:
+    name: Api Tests
     needs:
-      - version-bump
-    name: Build and Test Api
+      - notify
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
@@ -61,13 +28,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+    - name: Run linter
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Run tests
       run: |
         pytest
     - name: Push results to discord (sucess)
@@ -78,7 +45,7 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: 'The build [${{ github.job }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has succeeded.'
+        args: '[Api Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) succeeded for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
     - name: Push results to discord (fail)
       if: failure()
       env:
@@ -87,27 +54,22 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: 'The build [${{ github.job }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has failed.'
-  build-web:
+        args: '[Api Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
+  web-tests:
+    name: Web Tests
     needs:
-      - version-bump
-    name: Build Web
+      - notify
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Use Node.js 10.x
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-    - run: npm ci
+    - name: Run tests
+      run: npm ci
       working-directory: ./web
-    - run: npm run build --if-present
-      working-directory: ./web
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: dist-${{ needs.version-bump.outputs.version }}
-        path: ./web/build
     - name: Push results to discord (sucess)
       if: success()
       env:
@@ -116,7 +78,7 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: 'The build [${{ github.job }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has succeeded.'
+        args: '[Web Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) succeeded for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
     - name: Push results to discord (fail)
       if: failure()
       env:
@@ -125,74 +87,44 @@ jobs:
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: 'The build [${{ github.job }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has failed.'
-  merge-results:
+        args: '[Web Tests](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
+  build:
+    name: Build
     needs:
-      - version-bump
-      - build-api
-      - build-web
-    name: Merge Results
+      - notify
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Download dist
-      uses: actions/download-artifact@v1
+    - name: Use Node.js 10.x
+      uses: actions/setup-node@v1
       with:
-        name: dist-${{ needs.version-bump.outputs.version }}
-        path: ./dist
+        node-version: 10.x 
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./web
+    - name: Build Web
+      run: npm run build --if-present
+      working-directory: ./web
     - name: Merge and Zip
       run: |
-        mv ./dist ./web/build
-        touch artifact-${{ needs.version-bump.outputs.version }}.tgz
-        tar czfv artifact-${{ needs.version-bump.outputs.version }}.tgz --exclude=artifact-${{ needs.version-bump.outputs.version }}.tgz --exclude=.git .
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: artifact-${{ needs.version-bump.outputs.version }}
-        path: artifact-${{ needs.version-bump.outputs.version }}.tgz
-  deploy-to-heroku:
-    needs:
-      - merge-results
-      - version-bump
-    name: Deploy to Heroku
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Download artifact.tgz
-      uses: actions/download-artifact@v2
-      with:
-        name: artifact-${{ needs.version-bump.outputs.version }}
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Deploy to Staging
-      run: |
-        python deploy.py deploy --app cbongdevs-staging-helloworld artifact-${{ needs.version-bump.outputs.version }}.tgz
-        python deploy.py build-output --app cbongdevs-staging-helloworld -n 0
-      env:
-        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+        touch build-artifact.tgz
+        tar czfv build-artifact.tgz --exclude=build-artifact.tgz --exclude=.git .
     - name: Push results to discord (sucess)
       if: success()
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        DISCORD_USERNAME: Deploy Succeeded
+        DISCORD_USERNAME: Build Succeeded
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717522733965115543/GithubActionsGreenTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: 'Deployment for [${{ needs.version-bump.outputs.version }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has succeeded.'
+        args: '[Build](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) succeeded for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
     - name: Push results to discord (fail)
       if: failure()
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        DISCORD_USERNAME: Deploy Failed
+        DISCORD_USERNAME: Build Failed
         DISCORD_AVATAR: https://cdn.discordapp.com/attachments/717307128028594186/717523006964105246/GithubActionsRedTick.png
       uses: Ilshidur/action-discord@0.1.0
       with:
-        args: 'Deployment for [${{ needs.version-bump.outputs.version }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) of project ${{ github.repository }} has failed.'
+        args: '[Build](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed for [PR#${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}](${{ github.event.pull_request.html_url }}) on ${{ github.repository }}'
