Fail CI if code covearge of api is less than 60%.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -36,7 +36,8 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run tests
       run: |
-        pytest
+        pytest --cov=api
+        coverage report --fail-under=60
     - name: Push results to discord (sucess)
       if: success()
       env:
