--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ backcall==0.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
+coverage==5.1
 decorator==4.4.2
 Flask==1.1.2
 Flask-Migrate==2.5.3
@@ -41,6 +42,7 @@ Pygments==2.6.1
 pylint==2.5.0
 pyparsing==2.4.7
 pytest==5.4.2
+pytest-cov==2.10.0
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
