chore(fix): Add needs to workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -79,6 +79,10 @@ jobs:
   notify:
     name: Discord Notification
     runs-on: ubuntu-latest
+    needs:
+      - api-tests
+      - web-tests
+      - build
     
     steps:
       - name: Notify
