fix: Working directory for cypress

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -52,7 +52,7 @@ jobs:
     - name: E2E Tests
       uses: cypress-io/github-action@v1
       with:
-        project: ./web
+        working-directory: ./web
         start: npm run start
         wait-on: 'http://localhost:3000'
 
